syntax = "proto3";

package rs.jage.span;

import "google/protobuf/timestamp.proto";
import "common.proto";

message Span {
    // Span id
    uint64 id = 1;
    // The prcess id
    string process_id = 2;
    // Trace id
    uint64 trace_id = 3;
    // Parent span id
    optional uint64 parent_id = 4;
    // Span name
    string name = 5;
    // Start timestamp
    google.protobuf.Timestamp start = 6;
    // End timestamp
    optional google.protobuf.Timestamp end = 7;
    // Span's tags
    map<string, common.Value> tags = 8;

}